--- a/src/less/_header.less
+++ b/src/less/_header.less
@@ -1,2 +1,31 @@
 header {
+  width: 100%;
+  max-width: 1200px;
+  background: red;
+  margin: 0 auto 0;
+  min-height: 100px;
+  background: url('/images/icon.png') 0 10px no-repeat;
+  background-size: 140px;
+  padding: 20px 0 20px 150px;
+  nav {
+    width: 100%;
+    display: table;
+    table-layout: fixed;
+    a {
+      display: table-cell;
+      text-align: center;
+      display: table-cell;
+      text-align: center;
+      font-size: 30px;
+      line-height: 100px;
+      font-weight: 300;
+      text-decoration: none;
+      transition: all .3s ease;
+      color: #2196F3;
+      &:hover {
+        text-decoration: none;
+        color: #3F51B5;
+      }
+    }
+  }
 }
