--- a/src/less/_base.less
+++ b/src/less/_base.less
@@ -19,7 +19,12 @@ html, body {
 
 main {
   width: 100%;
-  min-height: 100%;
+  min-height: ~"calc(100% - 140px)";
   background: #e6e6e6;
+  max-width: 1200px;
+  margin: 0 auto;
 }
+
+
+
 
