--- a/src/less/_header.less
+++ b/src/less/_header.less
@@ -7,6 +7,7 @@ header {
   background: url('/images/icon.png') 0 10px no-repeat;
   background-size: 140px;
   padding: 20px 0 20px 150px;
+  position: relative;
   nav {
     width: 100%;
     display: table;
@@ -27,5 +28,13 @@ header {
         color: #3F51B5;
       }
     }
+  } //nav
+
+  #lnkHome {
+    position: absolute;
+    width: 140px;
+    height: 140px;
+    left: 0;
+    top: 0;
   }
 }
