--- a/src/less/_header.less
+++ b/src/less/_header.less
@@ -27,6 +27,9 @@ header {
         text-decoration: none;
         color: #3F51B5;
       }
+      &.actived {
+        color: #999;
+      }
     }
   } //nav
 
