--- a/src/less/_base.less
+++ b/src/less/_base.less
@@ -1,6 +1,3 @@
-.font-roboto {
-  font-family: 'Kanit', Tahoma, sans-serif;
-}
 
 * {
   outline: none !important;
@@ -11,17 +8,16 @@ html, body {
   width: 100%;
   height: 100%;
   min-height: 100%;
-  background: #e6e6e6;
+  background: #fff;
   margin: 0 0;
 
-  .font-roboto;
+  font-family: 'Kanit', Tahoma, sans-serif;
+  font-weight: 300;
 }
 
 main {
   width: 100%;
-  min-height: ~"calc(100% - 140px)";
-  background: #e6e6e6;
-  max-width: 1200px;
+  background: #fff;
   margin: 0 auto;
 }
 
