--- a/src/less/_regis.less
+++ b/src/less/_regis.less
@@ -1,13 +1,16 @@
-body[data-template="regis"] {
+body.template-regis {
   #frmRegis {
-    width: 70%;
-    margin: 20px auto 0;
+    width: 500px;
+    margin: 20px 0 0 30px;
+
+
+    .form-group {
+      margin: 0 0 10px 0;
+    }
+
     h3 {
       font-weight: 300;
-      text-align: center;
-      margin: 0 auto;
-      padding: 20px 0;
-      color: #3F51B5;
+      color: #777;
     }
 
     label {
