--- a/src/less/_login.less
+++ b/src/less/_login.less
@@ -5,7 +5,8 @@ body.template-login {
     margin: 100px auto 0;
 
     .form-group {
-      margin-bottom: 0;
+      margin: 0 0;
+      
       &.foot {
         margin-top: 20px;
         text-align: center;
