--- a/src/less/_home.less
+++ b/src/less/_home.less
@@ -46,3 +46,48 @@
     }
   }
 }
+
+.lawyer-book {
+  width: 700px;
+  margin: 20px auto 0;
+
+  .avt {
+    float: left;
+    width: 30%;
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-color: #eee;
+    padding: 10px;
+    img {
+      width: 100%;
+    }
+  }
+  .desc {
+    float: right;
+    width: 70%;
+    padding: 10px;
+
+    .name {
+      font-size: 25px;
+    }
+
+    .rate {
+      color: #FFC107;
+    }
+
+    .status {
+      i {
+        color: #76FF03;
+      }
+    }
+
+    .action {
+      a {
+        display: block;
+        clear: both;
+        width: 50%;
+        margin-bottom: 10px;
+      }
+    }
+  }
+}
