--- a/src/less/_profile.less
+++ b/src/less/_profile.less
@@ -16,6 +16,7 @@ body.template-profile {
 
       > div {
         display: table-cell;
+        vertical-align: top;
       }
 
       .avt {
@@ -24,6 +25,9 @@ body.template-profile {
         background-size: 100%;
         background-repeat: no-repeat;
         height: 200px;
+        img {
+          width: 100%;
+        }
       }
 
       .desc {
@@ -47,6 +51,5 @@ body.template-profile {
         min-width: 300px;
       }
     }
-
   }
 }
