lawyer desc field

--- a/src/less/_home.less
+++ b/src/less/_home.less
@@ -79,6 +79,7 @@
       i {
         color: #76FF03;
       }
+      margin-bottom: 20px;
     }
 
     .action {
@@ -89,5 +90,11 @@
         margin-bottom: 10px;
       }
     }
+  }
+
+  .skill {
+    clear: both;
+    width: 100%;
+    float: left;
   }
 }
