--- a/src/less/_profile.less
+++ b/src/less/_profile.less
@@ -2,7 +2,7 @@ body.template-profile {
   .profile-container {
     h3 {
       font-weight: 300;
-      color: #3F51B5;
+      color: #777;
       text-align: center;
     }
     
