--- a/src/less/_home.less
+++ b/src/less/_home.less
@@ -79,7 +79,19 @@
       i {
         color: #76FF03;
       }
-      margin-bottom: 20px;
+      margin: 10px 0;
+    }
+
+    .price {
+      margin: 10px 0;
+      color: #B71C1C;
+      font-weight: 400;
+      font-size: 20px;
+
+      &:after {
+        content: ' บาท/ชั่วโมง';
+        font-weight: 300;
+      }
     }
 
     .action {
