--- a/src/less/_profile.less
+++ b/src/less/_profile.less
@@ -38,6 +38,15 @@ body.template-profile {
             font-weight: 400;
             font-size: 20px;
           }
+
+          &.topup {
+            span {
+              color: #8BC34A;
+              &:after {
+                content: ' บาท';
+              }
+            }
+          }
         }
       }
     }
