--- a/src/less/_book.less
+++ b/src/less/_book.less
@@ -3,11 +3,21 @@
   .book-detail {
     clear: both;
     width: 100%;
-    float: left;
     margin-top: 20px;
+    display: inline-block;
 
     form {
       width: 80%;
+
+      .sum {
+        font-weight: 400;
+        color: #8BC34A;
+      }
+      
+      .topup {
+        color: #FFC107;
+        font-weight: 400;
+      }
     }
   }
 
