--- a/src/less/_base.less
+++ b/src/less/_base.less
@@ -34,3 +34,14 @@ label {
   }
   margin: 0 0;
 }
+
+
+.checkout-form > button {
+  display: inline-block;
+  padding: 1em;
+  border: 0;
+  background-color: #1A53F0;
+  color: white;
+  outline: none;
+  border-radius: 4px;
+}
