--- a/src/less/_base.less
+++ b/src/less/_base.less
@@ -45,3 +45,21 @@ label {
   outline: none;
   border-radius: 4px;
 }
+
+.videoContainer {
+  position: relative;
+  display: inline-block;
+}
+.videoContainer video {
+  position: relative;width: 300px; 
+  display: inline-block;
+  transform: none !important;
+  height: auto !important;
+}
+.volume { display: none !important; }
+
+.connectionstate {display: none;}
+#localScreenContainer {display: none;}
+#remotes {
+  display: inline-block;
+}
