--- a/src/less/_admin.less
+++ b/src/less/_admin.less
@@ -1,4 +1,4 @@
-body[data-template="admin"] {
+body.template-admin {
   table {
     th {
       font-weight: 300;
@@ -7,6 +7,8 @@ body[data-template="admin"] {
     }
   }
   .profile-container {
+    
+
     h3 {
       font-weight: 300;
       color: #3F51B5;
