user count chart

--- a/src/less/_admin.less
+++ b/src/less/_admin.less
@@ -5,6 +5,9 @@ body.template-admin {
       color: #3F51B5;
       text-transform: uppercase;
     }
+    td {
+      font-size: 12px;
+    }
   }
   .profile-container {
     
